tests/macros/tests/ui/err/has-unknown-argument.stderr
error: unexpected identifier
 --> tests/ui/err/has-unknown-argument.rs:3:1
  |
3 | #[trace(unknown = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
