tests/macros/tests/ui/err/has-unknown-argument.rs
use fastrace::trace;

#[trace(unknown = true)]
fn f() {}

fn main() {}
